major-structure-changes-with-few-pending-bugs